--- a/src/view/MainScreen.fxml
+++ b/src/view/MainScreen.fxml
@@ -1,43 +1,63 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane prefHeight="500.0" prefWidth="860.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.MainScreen">
+<AnchorPane prefHeight="425.0" prefWidth="860.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.MainScreen">
    <children>
-      <AnchorPane layoutX="60.0" layoutY="150.0" prefHeight="200.0" prefWidth="350.0" style="-fx-border-color: black;">
+      <AnchorPane layoutX="14.0" layoutY="150.0" prefHeight="217.0" prefWidth="396.0" style="-fx-border-color: black;">
          <children>
-            <TableView layoutX="21.0" layoutY="34.0" prefHeight="133.0" prefWidth="308.0">
+            <TableView layoutX="21.0" layoutY="34.0" prefHeight="134.0" prefWidth="364.0">
               <columns>
-                <TableColumn prefWidth="75.0" text="C1" />
-                <TableColumn prefWidth="75.0" text="C2" />
+                <TableColumn prefWidth="75.0" text="Part ID" />
+                <TableColumn prefWidth="75.0" text="Part Name" />
+                  <TableColumn prefWidth="91.20001220703125" text="Inventory Level" />
+                  <TableColumn prefWidth="120.80001831054688" text="Price per Unit" />
               </columns>
             </TableView>
-            <Label layoutX="31.0" layoutY="14.0" text="Parts">
+            <Label layoutX="21.0" layoutY="14.0" text="Parts">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </Label>
+            <Button layoutX="269.0" layoutY="167.0" mnemonicParsing="false" text="Modify" />
+            <Button layoutX="334.0" layoutY="167.0" mnemonicParsing="false" text="Delete" />
+            <Button layoutX="215.0" layoutY="167.0" mnemonicParsing="false" text="Add" />
+            <TextField layoutX="222.0" layoutY="10.0" promptText="Search by Part ID or Name" />
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="450.0" layoutY="150.0" prefHeight="200.0" prefWidth="350.0" style="-fx-border-color: black;">
+      <AnchorPane layoutX="450.0" layoutY="150.0" prefHeight="218.0" prefWidth="396.0" style="-fx-border-color: black;">
          <children>
-            <TableView layoutX="32.0" layoutY="34.0" prefHeight="133.0" prefWidth="308.0">
+            <TableView layoutX="21.0" layoutY="34.0" prefHeight="134.0" prefWidth="364.0">
                <columns>
-                  <TableColumn prefWidth="75.0" text="C1" />
-                  <TableColumn prefWidth="75.0" text="C2" />
+                  <TableColumn prefWidth="75.0" text="Product ID" />
+                  <TableColumn prefWidth="92.800048828125" text="Product Name" />
+                  <TableColumn prefWidth="92.79998779296875" text="Inventory Level" />
+                  <TableColumn prefWidth="102.4000244140625" text="Price per Unit" />
                </columns>
             </TableView>
-            <Label layoutX="39.0" layoutY="15.0" text="Products">
+            <Label layoutX="21.0" layoutY="14.0" text="Products">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </Label>
+            <Button layoutX="331.0" layoutY="168.0" mnemonicParsing="false" text="Delete" />
+            <Button layoutX="264.0" layoutY="168.0" mnemonicParsing="false" text="Modify" />
+            <Button layoutX="213.0" layoutY="168.0" mnemonicParsing="false" text="Add" />
+            <TextField layoutX="216.0" layoutY="10.0" promptText="Search by Product ID or Name" />
          </children>
       </AnchorPane>
+      <Label layoutX="14.0" layoutY="95.0" text="Inventory Management System">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font>
+      </Label>
+      <Button layoutX="771.0" layoutY="385.0" mnemonicParsing="false" text="Exit" />
    </children>
 </AnchorPane>
