--- a/src/view/MainScreen.fxml
+++ b/src/view/MainScreen.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane prefHeight="425.0" prefWidth="860.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.MainScreen">
+<AnchorPane prefHeight="425.0" prefWidth="860.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainScreen">
    <children>
       <AnchorPane layoutX="14.0" layoutY="150.0" prefHeight="217.0" prefWidth="396.0" style="-fx-border-color: black;">
          <children>
