--- a/src/view/AddPart.fxml
+++ b/src/view/AddPart.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -25,8 +26,12 @@
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </Label>
-                  <RadioButton mnemonicParsing="false" text="In-House" />
-                  <RadioButton mnemonicParsing="false" text="Outsourced" />
+                  <RadioButton fx:id="inHouse" mnemonicParsing="false" onAction="#onInHouse" selected="true" text="In-House">
+                     <toggleGroup>
+                        <ToggleGroup fx:id="toggleGroup" />
+                     </toggleGroup>
+                  </RadioButton>
+                  <RadioButton fx:id="outsourced" mnemonicParsing="false" onAction="#onOutsourced" text="Outsourced" toggleGroup="$toggleGroup" />
                </children>
             </HBox>
             <GridPane hgap="10.0" vgap="10.0">
