--- a/src/view/MainScreen.fxml
+++ b/src/view/MainScreen.fxml
@@ -8,7 +8,6 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="425.0" prefWidth="860.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainScreen">
    <children>
       <AnchorPane layoutX="14.0" layoutY="150.0" prefHeight="217.0" prefWidth="396.0" style="-fx-border-color: black;">
@@ -26,9 +25,9 @@
                   <Font name="System Bold" size="12.0" />
                </font>
             </Label>
-            <Button layoutX="269.0" layoutY="167.0" mnemonicParsing="false" text="Modify" />
-            <Button layoutX="334.0" layoutY="167.0" mnemonicParsing="false" text="Delete" />
-            <Button layoutX="215.0" layoutY="167.0" mnemonicParsing="false" text="Add" />
+            <Button fx:id="modifyPart" layoutX="269.0" layoutY="167.0" mnemonicParsing="false" onAction="#onModifyPart" text="Modify" />
+            <Button fx:id="deletePart" layoutX="334.0" layoutY="167.0" mnemonicParsing="false" text="Delete" />
+            <Button fx:id="addPart" layoutX="215.0" layoutY="167.0" mnemonicParsing="false" onAction="#onAddPart" text="Add" />
             <TextField layoutX="222.0" layoutY="10.0" promptText="Search by Part ID or Name" />
          </children>
       </AnchorPane>
@@ -47,9 +46,9 @@
                   <Font name="System Bold" size="12.0" />
                </font>
             </Label>
-            <Button layoutX="331.0" layoutY="168.0" mnemonicParsing="false" text="Delete" />
-            <Button layoutX="264.0" layoutY="168.0" mnemonicParsing="false" text="Modify" />
-            <Button layoutX="213.0" layoutY="168.0" mnemonicParsing="false" text="Add" />
+            <Button fx:id="deleteProduct" layoutX="331.0" layoutY="168.0" mnemonicParsing="false" text="Delete" />
+            <Button fx:id="modifyProduct" layoutX="264.0" layoutY="168.0" mnemonicParsing="false" onAction="#onModifyProduct" text="Modify" />
+            <Button fx:id="addProduct" layoutX="213.0" layoutY="168.0" mnemonicParsing="false" onAction="#onAddProduct" text="Add" />
             <TextField layoutX="216.0" layoutY="10.0" promptText="Search by Product ID or Name" />
          </children>
       </AnchorPane>
