--- a/src/view/MainScreen.fxml
+++ b/src/view/MainScreen.fxml
@@ -12,12 +12,12 @@
    <children>
       <AnchorPane layoutX="14.0" layoutY="150.0" prefHeight="217.0" prefWidth="396.0" style="-fx-border-color: black;">
          <children>
-            <TableView layoutX="21.0" layoutY="34.0" prefHeight="134.0" prefWidth="364.0">
+            <TableView fx:id="partsTable" layoutX="21.0" layoutY="34.0" prefHeight="134.0" prefWidth="364.0">
               <columns>
-                <TableColumn prefWidth="75.0" text="Part ID" />
-                <TableColumn prefWidth="75.0" text="Part Name" />
-                  <TableColumn prefWidth="91.20001220703125" text="Inventory Level" />
-                  <TableColumn prefWidth="120.80001831054688" text="Price per Unit" />
+                <TableColumn fx:id="partIdCol" prefWidth="75.0" text="Part ID" />
+                <TableColumn fx:id="partNameCol" prefWidth="75.0" text="Part Name" />
+                  <TableColumn fx:id="partInvLevelCol" prefWidth="91.20001220703125" text="Inventory Level" />
+                  <TableColumn fx:id="partPriceCol" prefWidth="120.80001831054688" text="Price per Unit" />
               </columns>
             </TableView>
             <Label layoutX="21.0" layoutY="14.0" text="Parts">
@@ -33,12 +33,12 @@
       </AnchorPane>
       <AnchorPane layoutX="450.0" layoutY="150.0" prefHeight="218.0" prefWidth="396.0" style="-fx-border-color: black;">
          <children>
-            <TableView layoutX="21.0" layoutY="34.0" prefHeight="134.0" prefWidth="364.0">
+            <TableView fx:id="productsTable" layoutX="21.0" layoutY="34.0" prefHeight="134.0" prefWidth="364.0">
                <columns>
-                  <TableColumn prefWidth="75.0" text="Product ID" />
-                  <TableColumn prefWidth="92.800048828125" text="Product Name" />
-                  <TableColumn prefWidth="92.79998779296875" text="Inventory Level" />
-                  <TableColumn prefWidth="102.4000244140625" text="Price per Unit" />
+                  <TableColumn fx:id="productIdCol" prefWidth="75.0" text="Product ID" />
+                  <TableColumn fx:id="productNameCol" prefWidth="92.800048828125" text="Product Name" />
+                  <TableColumn fx:id="productInvLevelCol" prefWidth="92.79998779296875" text="Inventory Level" />
+                  <TableColumn fx:id="productPriceCol" prefWidth="102.4000244140625" text="Price per Unit" />
                </columns>
             </TableView>
             <Label layoutX="21.0" layoutY="14.0" text="Products">
