--- a/src/view/MainScreen.fxml
+++ b/src/view/MainScreen.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DialogPane?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -58,5 +59,6 @@
          </font>
       </Label>
       <Button layoutX="771.0" layoutY="385.0" mnemonicParsing="false" text="Exit" />
+      <DialogPane fx:id="dialogPane" layoutX="230.0" layoutY="42.0" />
    </children>
 </AnchorPane>
