--- a/src/view/MainScreen.fxml
+++ b/src/view/MainScreen.fxml
@@ -51,7 +51,7 @@
             <Button fx:id="deleteProduct" layoutX="331.0" layoutY="168.0" mnemonicParsing="false" onAction="#onDeleteProduct" text="Delete" />
             <Button fx:id="modifyProduct" layoutX="264.0" layoutY="168.0" mnemonicParsing="false" onAction="#onModifyProduct" text="Modify" />
             <Button fx:id="addProduct" layoutX="213.0" layoutY="168.0" mnemonicParsing="false" onAction="#onAddProduct" text="Add" />
-            <TextField layoutX="216.0" layoutY="10.0" promptText="Search by Product ID or Name" />
+            <TextField fx:id="searchBarProduct" layoutX="216.0" layoutY="10.0" onAction="#getResultsProducts" promptText="Search by Product ID or Name" />
          </children>
       </AnchorPane>
       <Label layoutX="14.0" layoutY="95.0" text="Inventory Management System">
