--- a/src/view/AddPart.fxml
+++ b/src/view/AddPart.fxml
@@ -14,7 +14,6 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="520.0" prefWidth="633.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AddPart">
    <children>
       <VBox prefHeight="520.0" prefWidth="600.0">
@@ -58,7 +57,7 @@
                   <Label text="Inv" GridPane.rowIndex="2" />
                   <Label text="Price" GridPane.rowIndex="3" />
                   <Label text="Max" GridPane.rowIndex="4" />
-                  <Label text="Machine ID" GridPane.rowIndex="5" />
+                  <Label fx:id="toggleLabel" text="Machine ID" GridPane.rowIndex="5" />
                   <TextField GridPane.columnIndex="1" />
                   <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" />
                   <TextField GridPane.columnIndex="1" GridPane.rowIndex="2" />
