Disabled ID button for addPart page

--- a/src/view/AddPart.fxml
+++ b/src/view/AddPart.fxml
@@ -58,7 +58,10 @@
                   <Label text="Price" GridPane.rowIndex="3" />
                   <Label text="Max" GridPane.rowIndex="4" />
                   <Label fx:id="toggleLabel" text="Machine ID" GridPane.rowIndex="5" />
-                  <TextField GridPane.columnIndex="1" />
+                  <TextField editable="false" text="Auto Gen - Disabled" GridPane.columnIndex="1">
+                     <font>
+                        <Font name="System Italic" size="12.0" />
+                     </font></TextField>
                   <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" />
                   <TextField GridPane.columnIndex="1" GridPane.rowIndex="2" />
                   <TextField GridPane.columnIndex="1" GridPane.rowIndex="3" />
