--- a/src/view/AddPart.fxml
+++ b/src/view/AddPart.fxml
@@ -62,18 +62,18 @@
                      <font>
                         <Font name="System Italic" size="12.0" />
                      </font></TextField>
-                  <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <TextField GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                  <TextField GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                  <TextField GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                  <TextField GridPane.columnIndex="1" GridPane.rowIndex="5" />
-                  <TextField GridPane.columnIndex="3" GridPane.rowIndex="4" />
+                  <TextField fx:id="nameTF" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <TextField fx:id="stockTF" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <TextField fx:id="priceTF" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                  <TextField fx:id="maxTF" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                  <TextField fx:id="toggleTF" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                  <TextField fx:id="minTF" GridPane.columnIndex="3" GridPane.rowIndex="4" />
                   <Label text="Min" GridPane.columnIndex="2" GridPane.rowIndex="4" />
                </children>
             </GridPane>
             <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
                <children>
-                  <Button mnemonicParsing="false" text="Save" />
+                  <Button fx:id="saveButton" mnemonicParsing="false" onAction="#onSaveButton" text="Save" />
                   <Button mnemonicParsing="false" text="Cancel" />
                </children>
                <padding>
