--- a/src/view/ModifyPart.fxml
+++ b/src/view/ModifyPart.fxml
@@ -1,14 +1,89 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="controller.ModifyPart"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="520.0" prefWidth="633.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AddPart">
+    <children>
+        <VBox prefHeight="520.0" prefWidth="600.0">
+            <children>
+                <HBox prefHeight="100.0" prefWidth="200.0" spacing="20.0">
+                    <children>
+                        <Label text="Modify Part">
+                            <font>
+                                <Font name="System Bold" size="14.0" />
+                            </font>
+                        </Label>
+                        <RadioButton fx:id="inHouse" mnemonicParsing="false" onAction="#onInHouse" selected="true" text="In-House">
+                            <toggleGroup>
+                                <ToggleGroup fx:id="toggleGroup" />
+                            </toggleGroup>
+                        </RadioButton>
+                        <RadioButton fx:id="outsourced" mnemonicParsing="false" onAction="#onOutsourced" text="Outsourced" toggleGroup="$toggleGroup" />
+                    </children>
+                </HBox>
+                <GridPane hgap="10.0" vgap="10.0">
+                    <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="132.599951171875" minWidth="10.0" prefWidth="111.79996337890626" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="196.20001220703125" minWidth="10.0" prefWidth="175.999951171875" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="97.39996337890625" minWidth="10.0" prefWidth="58.400048828124966" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="155.800048828125" minWidth="10.0" prefWidth="152.60003662109375" />
+                    </columnConstraints>
+                    <rowConstraints>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                    <VBox.margin>
+                        <Insets left="10.0" right="10.0" />
+                    </VBox.margin>
+                    <children>
+                        <Label text="ID" />
+                        <Label text="Name" GridPane.rowIndex="1" />
+                        <Label text="Inv" GridPane.rowIndex="2" />
+                        <Label text="Price" GridPane.rowIndex="3" />
+                        <Label text="Max" GridPane.rowIndex="4" />
+                        <Label fx:id="toggleLabel" text="Machine ID" GridPane.rowIndex="5" />
+                        <TextField editable="false" GridPane.columnIndex="1">
+                            <font>
+                                <Font name="System Italic" size="12.0" />
+                            </font></TextField>
+                        <TextField fx:id="nameTF" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <TextField fx:id="stockTF" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <TextField fx:id="priceTF" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                        <TextField fx:id="maxTF" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                        <TextField fx:id="toggleTF" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                        <TextField fx:id="minTF" GridPane.columnIndex="3" GridPane.rowIndex="4" />
+                        <Label text="Min" GridPane.columnIndex="2" GridPane.rowIndex="4" />
+                    </children>
+                </GridPane>
+                <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
+                    <children>
+                        <Button fx:id="saveButton" mnemonicParsing="false" onAction="#onSaveButton" text="Save" />
+                        <Button mnemonicParsing="false" text="Cancel" />
+                    </children>
+                    <padding>
+                        <Insets right="20.0" />
+                    </padding>
+                </HBox>
+            </children>
+            <padding>
+                <Insets left="10.0" top="20.0" />
+            </padding>
+        </VBox>
+    </children>
 </AnchorPane>
