--- a/src/view/ModifyProduct.fxml
+++ b/src/view/ModifyProduct.fxml
@@ -1,14 +1,129 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.TilePane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="controller.ModifyProduct"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="700.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ModifyProduct">
+    <children>
+        <VBox layoutY="9.0" prefHeight="700.0" prefWidth="450.0">
+            <children>
+                <TilePane prefHeight="86.0" prefWidth="450.0">
+                    <children>
+                        <Label text="Add Product">
+                            <padding>
+                                <Insets left="50.0" top="50.0" />
+                            </padding>
+                            <font>
+                                <Font name="System Bold" size="14.0" />
+                            </font>
+                        </Label>
+                    </children>
+                </TilePane>
+                <GridPane prefHeight="213.0" prefWidth="450.0">
+                    <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="220.199951171875" minWidth="10.0" prefWidth="74.0000015258789" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="305.0000305175781" minWidth="10.0" prefWidth="147.6" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="305.0000305175781" minWidth="10.0" prefWidth="60.60002441406252" />
+                        <ColumnConstraints fillWidth="false" hgrow="SOMETIMES" maxWidth="305.0000305175781" minWidth="10.0" prefWidth="159.7999755859375" />
+                    </columnConstraints>
+                    <rowConstraints>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                    <VBox.margin>
+                        <Insets right="20.0" top="100.0" />
+                    </VBox.margin>
+                    <children>
+                        <Label text="ID" />
+                        <Label text="Name" GridPane.rowIndex="1" />
+                        <Label text="Inv" GridPane.rowIndex="2" />
+                        <Label text="Price" GridPane.rowIndex="3" />
+                        <Label text="Max" GridPane.rowIndex="4" />
+                        <Label text="Min" GridPane.columnIndex="2" GridPane.rowIndex="4">
+                            <GridPane.margin>
+                                <Insets left="15.0" />
+                            </GridPane.margin>
+                        </Label>
+                        <TextField editable="false" promptText="Auto Gen - Disabled" GridPane.columnIndex="1" />
+                        <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <TextField GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <TextField GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                        <TextField GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                        <TextField GridPane.columnIndex="3" GridPane.rowIndex="4">
+                            <opaqueInsets>
+                                <Insets />
+                            </opaqueInsets>
+                        </TextField>
+                    </children>
+                    <padding>
+                        <Insets left="20.0" />
+                    </padding>
+                </GridPane>
+            </children>
+        </VBox>
+        <VBox layoutX="450.0" layoutY="5.0" prefHeight="700.0" prefWidth="450.0">
+            <children>
+                <TilePane prefHeight="86.0" prefWidth="450.0">
+                    <children>
+                        <TextField prefHeight="26.0" prefWidth="174.0" promptText="Search by Part ID or Name">
+                            <TilePane.margin>
+                                <Insets left="265.0" top="50.0" />
+                            </TilePane.margin>
+                        </TextField>
+                    </children>
+                </TilePane>
+                <TableView prefHeight="200.0" prefWidth="200.0">
+                    <columns>
+                        <TableColumn prefWidth="112.51" text="Part ID" />
+                        <TableColumn prefWidth="112.51" text="Part Name" />
+                        <TableColumn prefWidth="112.51" text="Inventory Level" />
+                        <TableColumn prefWidth="112.51" text="Price per Unit" />
+                    </columns>
+                    <VBox.margin>
+                        <Insets right="10.0" />
+                    </VBox.margin>
+                </TableView>
+                <Pane prefHeight="84.0" prefWidth="450.0">
+                    <children>
+                        <Button layoutX="333.0" layoutY="29.0" mnemonicParsing="false" text="Add" />
+                    </children>
+                </Pane>
+                <TableView prefHeight="200.0" prefWidth="200.0">
+                    <columns>
+                        <TableColumn prefWidth="112.51" text="Part ID" />
+                        <TableColumn prefWidth="112.51" text="Part Name" />
+                        <TableColumn prefWidth="112.51" text="Inventory Level" />
+                        <TableColumn prefWidth="112.51" text="Price per Unit" />
+                    </columns>
+                    <VBox.margin>
+                        <Insets right="10.0" />
+                    </VBox.margin>
+                </TableView>
+                <Pane prefHeight="130.0" prefWidth="450.0">
+                    <children>
+                        <Button layoutX="273.0" layoutY="24.0" mnemonicParsing="false" text="Remove Associated Part" />
+                        <Button layoutX="273.0" layoutY="71.0" mnemonicParsing="false" text="Save" />
+                        <Button layoutX="365.0" layoutY="71.0" mnemonicParsing="false" text="Cancel" />
+                    </children>
+                </Pane>
+            </children>
+        </VBox>
+    </children>
 </AnchorPane>
+
