Added functionality to all remaining cancel buttons

--- a/src/view/AddProduct.fxml
+++ b/src/view/AddProduct.fxml
@@ -15,7 +15,6 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="700.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AddProduct">
    <children>
       <VBox layoutY="9.0" prefHeight="700.0" prefWidth="450.0">
@@ -119,7 +118,7 @@
                <children>
                   <Button layoutX="273.0" layoutY="24.0" mnemonicParsing="false" text="Remove Associated Part" />
                   <Button layoutX="273.0" layoutY="71.0" mnemonicParsing="false" text="Save" />
-                  <Button layoutX="365.0" layoutY="71.0" mnemonicParsing="false" text="Cancel" />
+                  <Button fx:id="cancelButton" layoutX="365.0" layoutY="71.0" mnemonicParsing="false" onAction="#onCancelButton" text="Cancel" />
                </children>
             </Pane>
          </children>
