--- a/src/view/AddProduct.fxml
+++ b/src/view/AddProduct.fxml
@@ -17,7 +17,7 @@
 
 <AnchorPane prefHeight="700.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AddProduct">
    <children>
-      <VBox layoutY="9.0" prefHeight="700.0" prefWidth="450.0">
+      <VBox layoutY="5.0" prefHeight="700.0" prefWidth="450.0">
          <children>
             <TilePane prefHeight="86.0" prefWidth="450.0">
                <children>
@@ -78,21 +78,21 @@
       </VBox>
       <VBox layoutX="450.0" layoutY="5.0" prefHeight="700.0" prefWidth="450.0">
          <children>
-            <TilePane prefHeight="86.0" prefWidth="450.0">
+            <TilePane prefHeight="86.0" prefWidth="443.0">
                <children>
-                  <TextField prefHeight="26.0" prefWidth="174.0" promptText="Search by Part ID or Name">
+                  <TextField fx:id="searchBarPart2" onAction="#getResultsParts2" prefHeight="26.0" prefWidth="174.0" promptText="Search by Part ID or Name">
                      <TilePane.margin>
                         <Insets left="265.0" top="50.0" />
                      </TilePane.margin>
                   </TextField>
                </children>
             </TilePane>
-            <TableView prefHeight="200.0" prefWidth="200.0">
+            <TableView fx:id="partsTable2" prefHeight="200.0" prefWidth="200.0">
               <columns>
-                <TableColumn prefWidth="112.51" text="Part ID" />
-                <TableColumn prefWidth="112.51" text="Part Name" />
-                  <TableColumn prefWidth="112.51" text="Inventory Level" />
-                  <TableColumn prefWidth="112.51" text="Price per Unit" />
+                <TableColumn fx:id="partIdCol2" prefWidth="112.51" text="Part ID" />
+                <TableColumn fx:id="partNameCol2" prefWidth="112.51" text="Part Name" />
+                  <TableColumn fx:id="partInvLevelCol2" prefWidth="112.51" text="Inventory Level" />
+                  <TableColumn fx:id="partPriceCol2" prefWidth="112.51" text="Price per Unit" />
               </columns>
                <VBox.margin>
                   <Insets right="10.0" />
@@ -101,6 +101,7 @@
             <Pane prefHeight="84.0" prefWidth="450.0">
                <children>
                   <Button layoutX="333.0" layoutY="29.0" mnemonicParsing="false" text="Add" />
+                  <Label fx:id="warningLabel" layoutX="34.0" layoutY="33.0" textFill="#f40505" />
                </children>
             </Pane>
             <TableView prefHeight="200.0" prefWidth="200.0">
