--- a/src/view/MainScreen.fxml
+++ b/src/view/MainScreen.fxml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DialogPane?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -60,10 +58,6 @@
          </font>
       </Label>
       <Button layoutX="771.0" layoutY="385.0" mnemonicParsing="false" onAction="#onExitButton" text="Exit" />
-      <DialogPane fx:id="dialogPane" layoutX="230.0" layoutY="42.0">
-         <padding>
-            <Insets left="150.0" />
-         </padding>
-      </DialogPane>
+      <Label fx:id="warningLabel" layoutX="416.0" layoutY="68.0" textFill="#f40505" />
    </children>
 </AnchorPane>
