--- a/src/view/AddProduct.fxml
+++ b/src/view/AddProduct.fxml
@@ -60,11 +60,11 @@
                      </GridPane.margin>
                   </Label>
                   <TextField editable="false" promptText="Auto Gen - Disabled" GridPane.columnIndex="1" />
-                  <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <TextField GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                  <TextField GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                  <TextField GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                  <TextField GridPane.columnIndex="3" GridPane.rowIndex="4">
+                  <TextField fx:id="prodNameTF" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <TextField fx:id="prodStockTF" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <TextField fx:id="prodPriceTF" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                  <TextField fx:id="prodMaxTF" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                  <TextField fx:id="prodMinTF" GridPane.columnIndex="3" GridPane.rowIndex="4">
                      <opaqueInsets>
                         <Insets />
                      </opaqueInsets>
@@ -100,16 +100,16 @@
             </TableView>
             <Pane prefHeight="84.0" prefWidth="450.0">
                <children>
-                  <Button layoutX="333.0" layoutY="29.0" mnemonicParsing="false" text="Add" />
+                  <Button layoutX="333.0" layoutY="29.0" mnemonicParsing="false" onAction="#onAddButton" text="Add" />
                   <Label fx:id="warningLabel2" layoutX="34.0" layoutY="33.0" textFill="#f40505" />
                </children>
             </Pane>
-            <TableView prefHeight="200.0" prefWidth="200.0">
+            <TableView fx:id="associatedPartsTable" prefHeight="200.0" prefWidth="200.0">
                <columns>
-                  <TableColumn prefWidth="112.51" text="Part ID" />
-                  <TableColumn prefWidth="112.51" text="Part Name" />
-                  <TableColumn prefWidth="112.51" text="Inventory Level" />
-                  <TableColumn prefWidth="112.51" text="Price per Unit" />
+                  <TableColumn fx:id="aPartIdCol" prefWidth="112.51" text="Part ID" />
+                  <TableColumn fx:id="aPartNameCol" prefWidth="112.51" text="Part Name" />
+                  <TableColumn fx:id="aPartInvLevelCol" prefWidth="112.51" text="Inventory Level" />
+                  <TableColumn fx:id="aPartPriceCol" prefWidth="112.51" text="Price per Unit" />
                </columns>
                <VBox.margin>
                   <Insets right="10.0" />
@@ -117,8 +117,8 @@
             </TableView>
             <Pane prefHeight="130.0" prefWidth="450.0">
                <children>
-                  <Button layoutX="273.0" layoutY="24.0" mnemonicParsing="false" text="Remove Associated Part" />
-                  <Button layoutX="273.0" layoutY="71.0" mnemonicParsing="false" text="Save" />
+                  <Button layoutX="273.0" layoutY="24.0" mnemonicParsing="false" onAction="#onRemoveButton" text="Remove Associated Part" />
+                  <Button layoutX="273.0" layoutY="71.0" mnemonicParsing="false" onAction="#onSaveButton" text="Save" />
                   <Button fx:id="cancelButton" layoutX="365.0" layoutY="71.0" mnemonicParsing="false" onAction="#onCancelButton" text="Cancel" />
                </children>
             </Pane>
