Set up Modify Product scene for initialization

--- a/src/view/AddProduct.fxml
+++ b/src/view/AddProduct.fxml
@@ -100,7 +100,7 @@
             </TableView>
             <Pane prefHeight="84.0" prefWidth="450.0">
                <children>
-                  <Button layoutX="333.0" layoutY="29.0" mnemonicParsing="false" onAction="#onAddButton" text="Add" />
+                  <Button fx:id="addButton" layoutX="333.0" layoutY="29.0" mnemonicParsing="false" onAction="#onAddButton" text="Add" />
                   <Label fx:id="warningLabel2" layoutX="34.0" layoutY="33.0" textFill="#f40505" />
                </children>
             </Pane>
