--- a/src/view/ModifyProduct.fxml
+++ b/src/view/ModifyProduct.fxml
@@ -59,12 +59,12 @@
                                 <Insets left="15.0" />
                             </GridPane.margin>
                         </Label>
-                        <TextField editable="false" promptText="Auto Gen - Disabled" GridPane.columnIndex="1" />
-                        <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <TextField GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                        <TextField GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                        <TextField GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                        <TextField GridPane.columnIndex="3" GridPane.rowIndex="4">
+                        <TextField fx:id="prodIdTF" editable="false" GridPane.columnIndex="1" />
+                        <TextField fx:id="prodNameTF2" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <TextField fx:id="prodStockTF2" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <TextField fx:id="prodPriceTF2" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                        <TextField fx:id="prodMaxTF2" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                        <TextField fx:id="prodMinTF2" GridPane.columnIndex="3" GridPane.rowIndex="4">
                             <opaqueInsets>
                                 <Insets />
                             </opaqueInsets>
@@ -104,12 +104,12 @@
                   <Label fx:id="warningLabel3" layoutX="14.0" layoutY="33.0" textFill="#f40505" />
                     </children>
                 </Pane>
-                <TableView prefHeight="200.0" prefWidth="200.0">
+                <TableView fx:id="associatedPartsTable2" prefHeight="200.0" prefWidth="200.0">
                     <columns>
-                        <TableColumn prefWidth="112.51" text="Part ID" />
-                        <TableColumn prefWidth="112.51" text="Part Name" />
-                        <TableColumn prefWidth="112.51" text="Inventory Level" />
-                        <TableColumn prefWidth="112.51" text="Price per Unit" />
+                        <TableColumn fx:id="aPartIdCol2" prefWidth="112.51" text="Part ID" />
+                        <TableColumn fx:id="aPartNameCol2" prefWidth="112.51" text="Part Name" />
+                        <TableColumn fx:id="aPartInvLevelCol2" prefWidth="112.51" text="Inventory Level" />
+                        <TableColumn fx:id="aPartPriceCol2" prefWidth="112.51" text="Price per Unit" />
                     </columns>
                     <VBox.margin>
                         <Insets right="10.0" />
